# Projeto_SSC

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/features/: metadata_completo_20250805_001604.json  relatorio_pipeline_20250805_001604.json
data/raw/: README.md
docs/: documentacao_tecnica.md
docs/referencias/: bibliografia.md
notebook/: III_classificacao_algoritmos.ipynb  II_extracao_caracteristicas.ipynb  IV_avaliacao_resultados.ipynb  I_preprocessamento_sinais.ipynb
results/figures/: README.md
results/metrics/: README.md
src/: __init__.py
src/classification/: __init__.py
src/feature_extraction/: __init__.py  extract_features_tecnica.md
src/preprocessing/: __init__.py  preprocessamento_tecnica.md
src/testes_/: Colunas_explicadas.txt  req.txt  testes_.ipynb
